Bug 199234 - Crash after ical import failed
Summary: Crash after ical import failed
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: import/export (other bugs)
Version First Reported In: 4.3
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 187276 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-07-07 06:55 UTC by Thomas Janssen
Modified: 2009-07-26 19:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Janssen 2009-07-07 06:55:16 UTC
Application that crashed: kontact
Version of the application: 4.3.0 rc1
KDE Version: 4.2.95 (KDE 4.2.95 (KDE 4.3 RC1))
Qt Version: 4.5.2
Operating System: Linux 2.6.27.21-170.2.56.fc10.x86_64 x86_64
Distribution: "Fedora release 10 (Cambridge)"

What I was doing when the application crashed:
Trying to import an ical source, which was failing badly, i had to close Kontact to get out of this "choose akonadi source or default calendar" loop. Next Kontact crashed.

 -- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[KCrash Handler]
#5  QMetaObject::activate (sender=0x2efde90, from_signal_index=32, to_signal_index=32, argv=0x7fffc337e1d0) at kernel/qobject.cpp:3061
#6  0x00007f689f2fae12 in CalendarView::modifiedChanged (this=0x0, _t1=true) at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/calendarview.moc:615
#7  0x00007f689f30a3ad in CalendarView::openCalendar (this=0x2efde90, filename=@0x2f6d258, merge=true) at /usr/src/debug/kdepim-4.2.95/korganizer/calendarview.cpp:388
#8  0x00007f689f36de65 in ActionManager::openURL (this=0x2f6d230, url=@0x2ef8a20, merge=true) at /usr/src/debug/kdepim-4.2.95/korganizer/actionmanager.cpp:947
#9  0x00007f689f371bbf in ActionManager::qt_metacall (this=0x2f6d230, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffc337e650)
    at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/actionmanager.moc:199
#10 0x0000003117358f32 in QMetaObject::activate (sender=0x2ef89f0, from_signal_index=<value optimized out>, to_signal_index=74, argv=0x1d7a680) at kernel/qobject.cpp:3113
#11 0x00007f689f381776 in ImportDialog::openURL (this=0x0, _t1=<value optimized out>, _t2=true) at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/importdialog.moc:97
#12 0x00007f689f382500 in ImportDialog::slotOk (this=0x2ef89f0) at /usr/src/debug/kdepim-4.2.95/korganizer/importdialog.cpp:95
#13 0x00007f689f382800 in ImportDialog::qt_metacall (this=0x2ef89f0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffc337e810)
    at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/importdialog.moc:78
#14 0x0000003117358f32 in QMetaObject::activate (sender=0x2ef89f0, from_signal_index=<value optimized out>, to_signal_index=45, argv=0x1d7a680) at kernel/qobject.cpp:3113
#15 0x0000003243d86628 in KDialog::slotButtonClicked (this=0x2ef89f0, button=4) at /usr/src/debug/kdelibs-4.2.95/kdeui/dialogs/kdialog.cpp:854
#16 0x0000003243d8871d in KDialog::qt_metacall (this=0x2ef89f0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffc337e9e0)
    at /usr/src/debug/kdelibs-4.2.95/x86_64-redhat-linux-gnu/kdeui/kdialog.moc:184
#17 0x00007f689f3827a5 in ImportDialog::qt_metacall (this=0x0, _c=3140643040, _id=-1019748016, _a=0x1d7a680) at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/importdialog.moc:69
#18 0x0000003117358f32 in QMetaObject::activate (sender=0x3d46ed8, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x1d7a680) at kernel/qobject.cpp:3113
#19 0x000000311735c71e in QSignalMapper::mapped (this=0x0, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:95
#20 0x000000311735cfc0 in QSignalMapper::map (this=0x3d46ed8, sender=0x3ccff50) at kernel/qsignalmapper.cpp:266
#21 0x000000311735dbb0 in QSignalMapper::qt_metacall (this=0x3d46ed8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffc337eb60) at .moc/release-shared/moc_qsignalmapper.cpp:81
#22 0x0000003117358f32 in QMetaObject::activate (sender=0x3ccff50, from_signal_index=<value optimized out>, to_signal_index=30, argv=0x1d7a680) at kernel/qobject.cpp:3113
#23 0x00000033ec3afda7 in QAbstractButton::clicked (this=0x0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#24 0x00000033ec109bdb in QAbstractButtonPrivate::emitClicked (this=0x3e3ea10) at widgets/qabstractbutton.cpp:543
#25 0x00000033ec10b842 in QAbstractButtonPrivate::click (this=0x3e3ea10) at widgets/qabstractbutton.cpp:536
#26 0x00000033ec10ba95 in QAbstractButton::mouseReleaseEvent (this=0x3ccff50, e=0x7fffc337f330) at widgets/qabstractbutton.cpp:1115
#27 0x00000033ebde099f in QWidget::event (this=0x3ccff50, event=0x7fffc337f330) at kernel/qwidget.cpp:7549
#28 0x00000033ebd8f80d in QApplicationPrivate::notify_helper (this=0x1da5210, receiver=0x3ccff50, e=0x7fffc337f330) at kernel/qapplication.cpp:4056
#29 0x00000033ebd981da in QApplication::notify (this=<value optimized out>, receiver=0x3ccff50, e=0x7fffc337f330) at kernel/qapplication.cpp:3758
#30 0x0000003243e12a9b in KApplication::notify (this=0x7fffc3381280, receiver=0x3ccff50, event=0x7fffc337f330) at /usr/src/debug/kdelibs-4.2.95/kdeui/kernel/kapplication.cpp:302
#31 0x000000311734403c in QCoreApplication::notifyInternal (this=0x7fffc3381280, receiver=0x3ccff50, event=0x7fffc337f330) at kernel/qcoreapplication.cpp:610
#32 0x00000033ebd97428 in QCoreApplication::sendSpontaneousEvent (event=<value optimized out>, receiver=<value optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:216
#33 QApplicationPrivate::sendMouseEvent (receiver=0x3ccff50, event=0x7fffc337f330, alienWidget=0x3ccff50, nativeWidget=0x2ef89f0, buttonDown=<value optimized out>, lastMouseReceiver=@0x33ec7c4050)
    at kernel/qapplication.cpp:2924
#34 0x00000033ebe011d9 in QETWidget::translateMouseEvent (this=0x2ef89f0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#35 0x00000033ebe00213 in QApplication::x11ProcessEvent (this=0x7fffc3381280, event=0x7fffc3380eb0) at kernel/qapplication_x11.cpp:3550
#36 0x00000033ebe274d4 in x11EventSourceDispatch (s=0x1da62b0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#37 0x0000003a68e377bb in g_main_dispatch () at gmain.c:2144
#38 IA__g_main_context_dispatch (context=0x1da7200) at gmain.c:2697
#39 0x0000003a68e3af8d in g_main_context_iterate (context=0x1da7200, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2778
#40 0x0000003a68e3b14b in IA__g_main_context_iteration (context=0x1da7200, may_block=1) at gmain.c:2841
#41 0x000000311736d56f in QEventDispatcherGlib::processEvents (this=0x1d79f40, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#42 0x00000033ebe26c5f in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#43 0x00000031173428d2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#44 0x0000003117342ca4 in QEventLoop::exec (this=0x7fffc33811e0, flags=) at kernel/qeventloop.cpp:201
#45 0x0000003117344f74 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#46 0x00000000004045f5 in main (argc=1, argv=0x7fffc3381968) at /usr/src/debug/kdepim-4.2.95/kontact/src/main.cpp:218

This bug may be a duplicate of or related to bug 199186

Reported using DrKonqi
Comment 1 Dario Andres 2009-07-07 12:08:28 UTC
Bug 187276 seems to be a duplicate of this one.
Comment 2 Dario Andres 2009-07-07 13:38:23 UTC
*** Bug 187276 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Janssen 2009-07-08 07:01:40 UTC
This time Kontact crashed over night (i was sleeping box was idling).

Application that crashed: kontact
Version of the application: 4.3.0 rc1
KDE Version: 4.2.95 (KDE 4.2.95 (KDE 4.3 RC1))
Qt Version: 4.5.2
Operating System: Linux 2.6.27.21-170.2.56.fc10.x86_64 x86_64
Distribution: "Fedora release 10 (Cambridge)"

What I was doing when the application crashed:
<In detail, tell us what you were doing  when the application crashed.>

 -- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[KCrash Handler]
#5  0x00007f9024b5f8c4 in QListData::size () at /usr/include/QtCore/qlist.h:87
#6  QList<KOTodoModel::TodoTreeNode*>::count () at /usr/include/QtCore/qlist.h:250
#7  KOTodoModel::TodoTreeNode::childrenCount () at /usr/src/debug/kdepim-4.2.95/korganizer/views/todoview/kotodomodel.cpp:161
#8  KOTodoModel::rowCount (this=0x15feac0, parent=@0x176b630) at /usr/src/debug/kdepim-4.2.95/korganizer/views/todoview/kotodomodel.cpp:640
#9  0x00007f9024b5f77c in KOTodoModel::index (this=0x15feac0, row=0, column=0, parent=@0x176b630) at /usr/src/debug/kdepim-4.2.95/korganizer/views/todoview/kotodomodel.cpp:599
#10 0x00000033ec30b39a in QSortFilterProxyModelPrivate::proxy_to_source (this=<value optimized out>, proxy_index=<value optimized out>) at itemviews/qsortfilterproxymodel.cpp:325
#11 0x00000033ec30b49d in QSortFilterProxyModel::mapToSource (this=<value optimized out>, proxyIndex=@0x0) at itemviews/qsortfilterproxymodel.cpp:2383
#12 0x00000033ec303585 in QSortFilterProxyModelPrivate::store_persistent_indexes (this=<value optimized out>) at itemviews/qsortfilterproxymodel.cpp:912
#13 0x00000033ec309cc9 in QSortFilterProxyModelPrivate::_q_sourceDataChanged (this=0x2709aa0, source_top_left=@0x7fff3fd93f90, source_bottom_right=@0x7fff3fd93f70)
    at itemviews/qsortfilterproxymodel.cpp:1063
#14 0x00000033ec30ac9a in QSortFilterProxyModel::qt_metacall (this=0x172d840, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3fd93c80)
    at .moc/release-shared/moc_qsortfilterproxymodel.cpp:120
#15 0x00007f9024b67b85 in KOTodoViewSortFilterProxyModel::qt_metacall (this=0x15feac0, _c=24557104, _id=0, _a=0x0)
    at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/kotodoviewsortfilterproxymodel.moc:62
#16 0x0000003117358f32 in QMetaObject::activate (sender=0x15feac0, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3113
#17 0x00000031173904b7 in QAbstractItemModel::dataChanged (this=0x15feac0, _t1=<value optimized out>, _t2=<value optimized out>) at .moc/release-shared/moc_qabstractitemmodel.cpp:126
#18 0x00007f9024b62c09 in KOTodoModel::reloadTodos (this=0x15feac0) at /usr/src/debug/kdepim-4.2.95/korganizer/views/todoview/kotodomodel.cpp:255
#19 0x00007f90246135e7 in KOrg::BaseView::qt_metacall (this=0x2701830, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3fd94160)
    at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/interfaces/korganizer/baseview.moc:141
#20 0x00007f9024b6dba5 in KOTodoView::qt_metacall (this=0x15feac0, _c=24557104, _id=0, _a=0x0) at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/kotodoview.moc:114
#21 0x0000003117358f32 in QMetaObject::activate (sender=0x2665fd0, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3113
#22 0x00007f9024b31d02 in DateChecker::dayPassed (this=0x15feac0, _t1=<value optimized out>) at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/datechecker.moc:88
#23 0x00007f9024b31d96 in DateChecker::passedMidnight (this=0x2665fd0) at /usr/src/debug/kdepim-4.2.95/korganizer/datechecker.cpp:76
#24 0x00007f9024b31ddb in DateChecker::possiblyPastMidnight (this=0x2665fd0) at /usr/src/debug/kdepim-4.2.95/korganizer/datechecker.cpp:82
#25 0x00007f9024b31ed8 in DateChecker::qt_metacall (this=0x2665fd0, _c=QMetaObject::InvokeMetaMethod, _id=157325, _a=0x7fff3fd942a0)
    at /usr/src/debug/kdepim-4.2.95/x86_64-redhat-linux-gnu/korganizer/datechecker.moc:75
#26 0x0000003117358f32 in QMetaObject::activate (sender=0x266d590, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3113
#27 0x0000003117353d43 in QObject::event (this=0x266d590, e=0x176b630) at kernel/qobject.cpp:1075
#28 0x00000033ebd8f80d in QApplicationPrivate::notify_helper (this=0x162bd10, receiver=0x266d590, e=0x7fff3fd94950) at kernel/qapplication.cpp:4056
#29 0x00000033ebd97a7a in QApplication::notify (this=0x7fff3fd94ca0, receiver=0x266d590, e=0x7fff3fd94950) at kernel/qapplication.cpp:4021
#30 0x0000003243e12a9b in KApplication::notify (this=0x7fff3fd94ca0, receiver=0x266d590, event=0x7fff3fd94950) at /usr/src/debug/kdelibs-4.2.95/kdeui/kernel/kapplication.cpp:302
#31 0x000000311734403c in QCoreApplication::notifyInternal (this=0x7fff3fd94ca0, receiver=0x266d590, event=0x7fff3fd94950) at kernel/qcoreapplication.cpp:610
#32 0x0000003117370ff9 in QCoreApplication::sendEvent () at kernel/qcoreapplication.h:213
#33 QTimerInfoList::activateTimers (this=0x162e4d0) at kernel/qeventdispatcher_unix.cpp:572
#34 0x000000311736d60d in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:165
#35 0x0000003a68e377bb in g_main_dispatch () at gmain.c:2144
#36 IA__g_main_context_dispatch (context=0x162daa0) at gmain.c:2697
#37 0x0000003a68e3af8d in g_main_context_iterate (context=0x162daa0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2778
#38 0x0000003a68e3b14b in IA__g_main_context_iteration (context=0x162daa0, may_block=1) at gmain.c:2841
#39 0x000000311736d56f in QEventDispatcherGlib::processEvents (this=0x15fdf40, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#40 0x00000033ebe26c5f in QGuiEventDispatcherGlib::processEvents (this=0x15feac0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#41 0x00000031173428d2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#42 0x0000003117342ca4 in QEventLoop::exec (this=0x7fff3fd94c00, flags=) at kernel/qeventloop.cpp:201
#43 0x0000003117344f74 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#44 0x00000000004045f5 in main (argc=1, argv=0x7fff3fd95388) at /usr/src/debug/kdepim-4.2.95/kontact/src/main.cpp:218
Comment 4 Dario Andres 2009-07-08 13:23:01 UTC
The second backtrace seems to be different comparing it to the first one. Does the crash situation relates with the original crash situation? If it doesn't, you should file a new bug report about it (the policy is one report per issue, and not mixing backtraces). Thanks!
Comment 5 Thomas Janssen 2009-07-08 13:50:35 UTC
You're right, my bad. It wasn't the same situation. I shouldn't file bugreports without my first coffee :)
Comment 6 Thomas Janssen 2009-07-09 13:28:45 UTC
Well, interesting is that the import just "appeared" to fail. I checked the dates today and the ical source got imported *scratches his head*. So it was trapped in a loop (the import in a popup), Kontact crashed after i closed it (while the loop was there) but it added it.

Steps to reproduce:
Import: http://poelstra.fedorapeople.org/schedules/f-12/f-12-devel.ics
Comment 7 Christophe Marin 2009-07-09 13:39:23 UTC
ok, the loop is easy to reproduce: File / import / pick a ICS / Merge into an existing resource. (I need to dig, I think we have a report for this issue)
Comment 8 Christophe Marin 2009-07-09 13:51:17 UTC
Console output :

merge/selected the std2 (test calendar) resource / clicked ok :

korganizer(19823)/kdepimlibs (kabc) KABC::Lock::lock: -- lock name: "/home/krop/.kde/share/apps/kabc/lock/.lock"
korganizer(19823)/kdepimlibs (kabc) KABC::Lock::lock: -- lock unique name: "/home/krop/.kde/share/apps/kabc/lock/ayJfl2pP"
korganizer(19823)/kdepimlibs (kcal) KCal::ResourceCalendar::save: "std2 (test calendar)"
korganizer(19823)/kdepimlibs (kcal) KCal::FileStorage::save:
korganizer(19823)/kdepimlibs (kcal) KCal::ICalFormat::save: "/home/krop/.kde/share/apps/korganizer/std2.ics"
korganizer(19823)/kdepimlibs (kcal) KCal::ResourceLocal::doSave: Save of  "/home/krop/.kde/share/apps/korganizer/std2.ics" was  true

Attempt 2: 

korganizer(19823)/kdepimlibs (kabc) KABC::Lock::lock: -- lock name: "/home/krop/.kde/share/apps/kabc/lock/.lock"
korganizer(19823)/kdepimlibs (kabc) KABC::Lock::lock: -- lock unique name: "/home/krop/.kde/share/apps/kabc/lock/0sZwhHar"
korganizer(19823)/kdepimlibs (kcal) KCal::ResourceCalendar::save: "std2 (test calendar)"
korganizer(19823)/kdepimlibs (kcal) KCal::FileStorage::save:
korganizer(19823)/kdepimlibs (kcal) KCal::ICalFormat::save: "/home/krop/.kde/share/apps/korganizer/std2.ics"
korganizer(19823)/kdepimlibs (kcal) KCal::ResourceLocal::doSave: Save of  "/home/krop/.kde/share/apps/korganizer/std2.ics" was  true

and so on.
Comment 9 Sergio Martins 2009-07-26 19:57:08 UTC
SVN commit 1002658 by smartins:

When merging ics files, only ask which resource to use once, and not one time for each incidence.

Review: http://reviewboard.kde.org/r/994/
MERGE: e4
BUG: 199234




 M  +10 -0     calendar.cpp  
 M  +36 -0     calendar.h  
 M  +31 -2     calendarresources.cpp  
 M  +14 -0     calendarresources.h  
 M  +4 -0      icalformat_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1002658