When merging ics files, only ask which resource to use once, and not one time for each incidence.

Review: http://reviewboard.kde.org/r/994/
MERGE: e4
BUG: 199234



svn path=/trunk/KDE/kdepimlibs/; revision=1002658